--- a/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
+++ b/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Observer\ISubject.cs" />
     <Compile Include="Serializer\Serializable.cs" />
     <Compile Include="Serializer\Serializer.cs" />
+    <Compile Include="Storage\AdresaStorage.cs" />
+    <Compile Include="Storage\KatedraStorage.cs" />
+    <Compile Include="Storage\OcenaStorage.cs" />
+    <Compile Include="Storage\PredmetStorage.cs" />
+    <Compile Include="Storage\ProfesorStorage.cs" />
+    <Compile Include="Storage\StudentStorage.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -118,7 +124,6 @@
     <Folder Include="Controller\" />
     <Folder Include="Data\" />
     <Folder Include="Model\DAO\" />
-    <Folder Include="Storage\" />
     <Folder Include="View\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
