--- a/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
+++ b/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
@@ -77,6 +77,18 @@
     <Compile Include="Storage\PredmetStorage.cs" />
     <Compile Include="Storage\ProfesorStorage.cs" />
     <Compile Include="Storage\StudentStorage.cs" />
+    <Compile Include="View\CreateAdresa.xaml.cs">
+      <DependentUpon>CreateAdresa.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\CreatePredmet.xaml.cs">
+      <DependentUpon>CreatePredmet.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\CreateProfesor.xaml.cs">
+      <DependentUpon>CreateProfesor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\CreateStudent.xaml.cs">
+      <DependentUpon>CreateStudent.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -89,6 +101,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\CreateAdresa.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\CreatePredmet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\CreateProfesor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\CreateStudent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Adresa.cs" />
@@ -134,7 +162,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="View\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
