--- a/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
+++ b/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Storage\PredmetStorage.cs" />
     <Compile Include="Storage\ProfesorStorage.cs" />
     <Compile Include="Storage\StudentStorage.cs" />
+    <Compile Include="View\AddPredmetToProfesor.xaml.cs">
+      <DependentUpon>AddPredmetToProfesor.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\AddStudentToPredmet.xaml.cs">
       <DependentUpon>AddStudentToPredmet.xaml</DependentUpon>
     </Compile>
@@ -113,6 +116,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\AddPredmetToProfesor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\AddStudentToPredmet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
