--- a/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
+++ b/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
@@ -80,6 +80,9 @@
     <Compile Include="View\AddPredmetToProfesor.xaml.cs">
       <DependentUpon>AddPredmetToProfesor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\AddProfesorToPredmet.xaml.cs">
+      <DependentUpon>AddProfesorToPredmet.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\AddStudentToPredmet.xaml.cs">
       <DependentUpon>AddStudentToPredmet.xaml</DependentUpon>
     </Compile>
@@ -117,6 +120,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\AddPredmetToProfesor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AddProfesorToPredmet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
